tests/src/tests/fail/no-macro-args.stderr
error: `async_generic` on `fn` can only take an `async_signature` argument
 --> src/tests/fail/no-macro-args.rs:3:17
  |
3 | #[async_generic(Send)]
  |                 ^^^^
